--- a/app/css/style.css
+++ b/app/css/style.css
@@ -112,7 +112,7 @@ h1 {
 }
 
 .poster-proportion {
-    height: 140px;
+    height: 100px;
     margin-right: 5rem;
 }
 
@@ -128,12 +128,13 @@ h1 {
 .movie-card__infos__title {
     display: block;
     text-align: center;
-    margin-right: 3rem;
     margin-bottom: 2rem;
+    max-width: 220px;
 }
 
 .movie-card__infos__details {
-    display: flex; 
+    display: flex;
+    justify-content: center; 
     text-align: center;
 }
 
