Quinto dia: Adicionando a função de favoritar e persistindo dados no Local Storage

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -165,9 +165,7 @@ h1 {
     cursor: pointer;
 }
 
-.detail-favorite::before {
-    font-family:'Bootstrap-icons';
-    content: '\F417';
+.icon-fav {
     color: #BA0707;
     margin-right: 0.75rem;
 }
